--- a/build
+++ b/build
@@ -6,5 +6,5 @@ CONTAINER=$(docker create allprogrammic/openresty-bundle-deb)
 if [ ! -d ./artifacts ]; then
     mkdir ./artifacts
 fi
-docker cp $CONTAINER:/build/openresty_*.deb ./artifacts/
+docker cp $CONTAINER:/build/openresty_1.9.15.1~allprogrammic+1.1_amd64.deb ./artifacts/
 docker rm $CONTAINER
