--- a/build
+++ b/build
@@ -6,5 +6,5 @@ CONTAINER=$(docker create allprogrammic/openresty-bundle-deb)
 if [ ! -d ./artifacts ]; then
     mkdir ./artifacts
 fi
-docker cp $CONTAINER:/build/openresty_1.11.2.2-2-tapstream1_amd64.deb ./artifacts/
+docker cp $CONTAINER:/build/openresty_*-tapstream1_amd64.deb ./artifacts/
 docker rm $CONTAINER
